--- a/frontEnd/src/components/home/home.css
+++ b/frontEnd/src/components/home/home.css
@@ -11,3 +11,10 @@
     margin-top: 100px;
     color: rgba(0, 0, 0, 0.623);
 }
+
+.boss{
+ text-align: center;
+ margin: 40px auto;  
+ width: 80%;
+
+}
